Improve upon test suite flakiness (#327)
* Make `turbo_test.rb` with Rails' generated `test_helper.rb`

> Something in the test suite configuration is preventing the database
> from being wiped between test runs. This results in state leaking
> between tests. As a result, our Continuous Integration tests are flaky.
>
> - [hotwired/turbo-rails#248][]

As a follow-up to the [short-term solution][] shipped in
[hotwired/turbo-rails#248][], this commit attempts to make the
`test/turbo_test.rb` file's setup consistent with the test harness setup
generated by Rails' [engine generator][] code.

To that end, this commit:

* renames the `test/turbo_test.rb` file to `test/test_helper.rb`
* omits one-off `require` calls for particular dependencies
* re-orders the require calls so that the
  `../test/dummy/config/environment` file is required ahead of the
  `rails/test_help` file

[engine generator]: https://github.com/rails/rails/blob/3c48b4030adbded21bebaa0d78254216cca48a6e/railties/lib/rails/generators/rails/plugin/templates/test/test_helper.rb.tt
[hotwired/turbo-rails#248]: https://github.com/hotwired/turbo-rails/pull/248
[short-term solution]: https://github.com/hotwired/turbo-rails/commit/c2dc5b15acaf3cb0aebb581b7dfa0b792ec50bc1

* Use Ruby 2.7 argument forwarding

Switching to argument forwarding addresses deprecation warnings like:

```
hotwired/turbo-rails/test/streams/streams_channel_test.rb:140: warning: Using the last argument as keyword parameters is deprecated; maybe ** should be added to the call
hotwired/turbo-rails/test/turbo_test.rb:14: warning: The called method `render' is defined here
```

* Tests: Load 6.1 defaults in Dummy Application

Resolve deprecation warnings like:

```
Preparing test database
DEPRECATION WARNING: Non-URL-safe CSRF tokens are deprecated. Use 6.1 defaults or above. (called from <top (required)> at /home/runner/work/turbo-rails/turbo-rails/test/dummy/config/initializers/inspect_helpers.rb:1)
DEPR

--- a/test/dummy/app/views/messages/index.html.erb
+++ b/test/dummy/app/views/messages/index.html.erb
@@ -1,9 +1,8 @@
 <h1>Messages</h1>
 
-<span id="message-count">
-  <%= @messages.count %> messages sent
-</span>
+<%= render "template_button", content: "Start listening for broadcasts" do %>
+  <%= turbo_stream_from "messages" %>
+<% end %>
 
-<%= turbo_stream_from "messages" %>
 <div id="messages">
 </div>
