--- a/test/dummy/app/views/messages/echo.html.erb
+++ b/test/dummy/app/views/messages/echo.html.erb
@@ -1,5 +1,8 @@
 <h1>Echo Messages</h1>
 
-<%= turbo_stream_from "messages", channel: EchoChannel, data: {message: "Hello, world!"} %>
+<%= render "template_button", content: "Start listening for broadcasts" do %>
+  <%= turbo_stream_from "messages", channel: EchoChannel, data: {message: "Hello, world!"} %>
+<% end %>
+
 <div id="messages">
 </div>
